# school

./: .gitignore  .gitmodules
assn1/: main
assn2/: .clang-format  Assignment2.cpp  CMakeLists.txt
assn3/: distributions.cpp  main.cpp
assn4/: TestPerformance.cpp  main  sortutils.cpp
assn5/: TestWordTree.cpp  WordTree.cpp  WordTree.hpp  main.cpp
cpp/assn1/: Assignment1.cpp
cpp/assn3/: CMakeLists.txt  TestDistributions.cpp  distributions.hpp
cpp/assn4/: .clang-format  CMakeLists.txt  main.cpp  sortutils.hpp
cpp/assn5/: CMakeLists.txt  TestWordTree.cpp  WordTree.cpp  WordTree.hpp  dictionary.txt  main.cpp
cpp/assn6/: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  Pattern.hpp  PatternAcorn.cpp  PatternAcorn.hpp  PatternBlinker.cpp  PatternBlinker.hpp  PatternBlock.cpp  PatternBlock.hpp  PatternGlider.cpp  PatternGlider.hpp  PatternGosperGliderGun.cpp  PatternGosperGliderGun.hpp  RenderConsole.cpp  RenderConsole.hpp  Renderer.hpp  main.cpp
cpp/assn7/: CMakeLists.txt  CMakeLists.txt.in  TestWeight.cpp  main.cpp  weight.hpp
cpp/assn8/: CMakeLists.txt  TestMemory.cpp  main.cpp  shared_ptr.hpp
cpp/assn9/: CMakeLists.txt  TestPriorityQueue.cpp  main.cpp  priority_queue.hpp
cs1400/Assn11/: assn11.py  pattern.py  plan.txt
cs1400/Assn12/: assn12-task2.py  plan.txt
cs1400/Assn13/: assn13-task2.py  password.py  plan.txt
cs1400/Assn14/: assn14-task3.py  circle.py  cuboid.py  rectangle.py
cs1400/Assn15/: assn15-task1.py  assn15-task2.py  assn15-task3.py  card.py  deck.py  gronkyutil.py  plan.txt
cs1400/Assn4/: task1.py  task2.py
cs1400/Assn5/: task1.py  task2.py
cs1400/Assn6/: task2.py
cs1400/Assn7/: task1.py  task2.py
cs1400/Assn8/: task1.py  task2.py
cs1400/Assn8/Assn10/: assn10.py  chessboard.py  plan.txt
cs1400/Assn8/Assn12/: account.py  assn12-task1.py
cs1400/Assn8/Assn13/: chessboard.py
cs1400/Assn8/Assn14/: assn14-task1.py  assn14-task2.py  plan.txt
cs1400/Assn8/Assn15/: assn15-task3.py
cs1400/Assn8/Assn6/: task1.py
cs1400/Assn8/Assn7/: task1.py
cs1400/CaseStudies/: 4.16.py  4.4.py
cs1400/ClassWork/: binary_search.py  circumference.py  classes.py  hello_world.py  strings.py  turtle_demo.py
cs1400/cs1400-demo-code/Demo02-FileStructure/: structure.py
cs1400/cs1400-demo-code/Demo03-Turtle/: random.py  smiley.py
cs1400/cs1400-demo-code/Demo04-CircleInfo/: circle1.py  circle2.py  circle3.py  circle4.py  circle5.py
cs1400/cs1400-demo-code/Demo05-Modulus/: modulus.py  timedemo.py
cs1400/cs1400-demo-code/Demo06-OperatorPrecedence/: precendence.py
cs1400/cs1400-demo-code/Demo07-AugmentedAssignment/: augmented.py
cs1400/cs1400-demo-code/Demo08-TypeConversion/: conversion.py
cs1400/cs1400-demo-code/Demo09-Rounding/: rounding.py
cs1400/cs1400-demo-code/Demo09a-ComputeLoan/: ComputeLoan.py  plan.txt
cs1400/cs1400-demo-code/Demo10-Functions/: angleCalculation.py  builtin.py  modulefunctions.py
cs1400/cs1400-demo-code/Demo11-Strings/: concatenation.py  strings.py
cs1400/cs1400-demo-code/Demo12-LineWrap/: linewrap.py
cs1400/cs1400-demo-code/Demo13-Objects/: idandtype.py  stringobject.py
cs1400/cs1400-demo-code/Demo14-Formatting/: formatting.py
cs1400/cs1400-demo-code/Demo15-Selections/: comparedemo.py  ifdemo.py  ifelifdemo.py  ifelsedemo1.py  ifelsedemo2.py  nestedifdemo.py  shortcut.py  zodiac.py
cs1400/cs1400-demo-code/Demo16-LogicOperators/: divisible.py  logic.py  sort.py
cs1400/cs1400-demo-code/Demo17-ConditionalExpression/: assignment.py
cs1400/cs1400-demo-code/Demo18-WhileLoop/: counter.py  floatproblem.py  guess.py  sentinal.py  (+1 more)
cs1400/uml/: uml.cr  uml.py
cs1410/Assn1/: ISBN.java  Quadratic.java  isbn.py
cs2410/Caclulator/: settings.gradle
cs2410/madlib/: settings.gradle
cs2410/tree/: settings.gradle
cs2610/assn0/: about.html  index.html  techtips+css.html  techtips-css.html
cs2610/assn1/: server.py  utils.py
cs2610/assn3/: README.md  index.html  script.js  style.css
cs2610/assn5/: index.html  style.css
cs3100/assignment1/: Assign1.java
cs3100/assignment2/: .project  build.gradle
cs3100/assignment3/: .project  build.gradle
cs3100/assignment4/: .project  build.gradle
cs3100/assignment5/: .project  build.gradle
cs3100/assignment6/: .project  build.gradle
cs4600/midterm/: README.md  package.json
cs5060/hw1/: README.md  class.py  main.py
cs5060/hw2/: README.md  epsilongreedy.py  main.py
cs5060/hw3/: Collings_Sean_HW3.py  README.md  stock1.csv  stock2.csv
cs5060/hw5/: README.md  main.py
cs5060/midterm/: prob1.py  prob2.py  prob3.py
cs5260/hw1/: list_buckets.rb
cs5260/hw2/: .gitignore  Gemfile  README.md  output-log.txt
cs5260/hw3/: Dockerfile  Gemfile
cs5260/hw4/: lambda_function.py  pyproject.toml  requests.txt
cs5260/hw4/producer/: __init__.py  errors.py  handler.py  main.py  response.py  widget.py
cs5260/hw4/sample-requests/bad/: 1612306375135
cs5260/hw4/sample-requests/good/: 1612306369227  1612306369451  1612306369713  1612306369907  1612306371375  1612306371974  1612306373799  1612306374890  1612306375282  1612306375653  1612306375912  1612306376056  1612306376404  1612306377574
cs5260/hw4/src/: main.py
cs5260/hw4/tests/: test_requests.py
cs5300/hw2/: Infix.java  InfixTest.py
cs5300/hw4/: compile
cs5300/hw9/: add.asm  array.asm  fee.asm
cs5300/p4-formatter/: out.txt
deep-learning/: neural.ipynb
deep-learning/final_project/: 1-1-nn_features_30.ipynb  1-2-nn_features_3.ipynb  1-3-images.ipynb  1-4-extract_features.ipynb  1-5-ml-approaches.ipynb  2-beijing-pm2.5.ipynb
deep-learning/hw1/: HW1_Fall2022_Starter.ipynb
deep-learning/hw2/: HW2_Fall2022_Starter.ipynb
deep-learning/hw3/: Gradient_Descent_MiniMNIST.ipynb  MNIST_LittleTuned.ipynb  model.ckpt
deep-learning/hw4/: Alexnet.ipynb  CNN.ipynb  some-file.pkl
deep-learning/hw5/: Autoencoder.ipynb  GRNN.ipynb  Matrix_Completion_AE.ipynb
programming-langs/julia/: game_of_life.jl
programming-langs/lisp/: class.lsp  code.lsp  lisp.py
programming-langs/prolog/: castle.pl  hello_world.pl  sample.pl  test.pl
programming-langs/raku/: MyCode.pm6  main.raku  program.txt
(+380 files in other folders)
