[tool.poetry]
name = "hw5"
version = "0.1.0"
description = ""
authors = ["Sean Collings <seanrcollings@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.17.0"
boto3 = "^1.26.13"

[tool.poetry.dev-dependencies]
types-boto3 = "^1.0.2"
types-jsonschema = "^4.17.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

